Fix the linklist getting out of the screen (margin left auto); Refactored and simplified css code

--- a/style.css
+++ b/style.css
@@ -1,22 +1,47 @@
 body {
-    font-family: "Roboto";
+    font-family: 'Roboto';
     display: flex;
-    width: 100vw;
+    flex-direction: column;
+    
 }
+
+/* Styles properties */
+.header {
+    border: 2px double red;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.linklist {
+    font-size: 18px;
+    color: #E5e7eb;
+}
+
+.header, .first {
+        background-color: #1F2937;
+}
+
+.title {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.titlesubtext {
+    font-size: 18px;
+    color: #E5e7eb;
+}
+
+/* Positionning properties */
 
 .header {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background-color: #1F2937;
-    font-size: 24px;
-    color: #F9FAF8;
-    padding: 0 100px;
+    flex-direction: row;
+    padding: 16px;
 }
 
 .linklist {
     display: flex;
+    margin-left: auto;
     gap: 20px;
-    font-size: 18px;
-    color: #E5e7eb;
 }
